--- a/meta.html
+++ b/meta.html
@@ -62,11 +62,11 @@
                 <span style="color: white;" class="stat-label">Build date</span>
             </div>
             <div class="stat">
-                <span class="stat-number" id="last-updated">1-13-26</span>
+                <span class="stat-number" id="last-updated">1-21-26</span>
                 <span style="color: white;"  class="stat-label">Last Updated</span>
             </div>
             <div class="stat">
-                <span class="stat-number" id="version">2026.1</span>
+                <span class="stat-number" id="version">2026.1.1</span>
                 <span style="color: white;"  class="stat-label">Current Version</span>
             </div>
             <div class="stat">
@@ -82,22 +82,59 @@
             <h3>2026.1</h3>
             <li>
                 <p>Updated Index</p>
-                <p>Updated script.js</p>
-                <p>Updated styles.css</p>
-                <p>Added Contact</p>
-                <p>Added Blog</p>
+            </li>
+            <li>
+              <p>Updated script.js</p>
+            </li>
+            <li>
+              <p>Updated styles.css</p>
+            </li>
+            <li>
+              <p>Added Contact</p>
+            </li>
+            <li>
+                              <p>Added Blog</p>
+            <li>
                 <p>Added About</p>
+            </li>
+            <li>
                 <p>Added 404</p>
+            </li>
+            <li>
                 <p>Added Meta</p>
+            </li>
+            <li>
                 <p>Added Modpacks</p>
+            </li>
+            <li>
                 <p>Added Privacy</p>
+            </li>
+            <li>
                 <p>Added Projects</p>
+            </li>
+            <li>
                 <p>Added robots.txt</p>
+            </li>
+            <li>
                 <p>Added sitemap.xml</p>
+            </li>
+            <li>
                 <p>Added ATS Modpack</p>
+            </li>
+            <li>
                 <p>Added ETS2 Modpack</p>
+            </li>
+            <li>
                 <p>Added Blog Post "Welcome to the new site!"</p>
+            </li>
+            <li>
                 <p>Added countless Images</p>
+            </li>
+            <li>
+              <p>Fixed worng lasted Updated date <i><b>[2026.1.1]</b></i></p>
+            </li>
+            <li>
+              <p>Fixed broken list cause I forgot how HTML lists work <i><b>[2026.1.1]</b></i></p>
             </li>
         </ul>
     </section>
