--- a/meta.html
+++ b/meta.html
@@ -62,11 +62,11 @@
                 <span style="color: white;" class="stat-label">Build date</span>
             </div>
             <div class="stat">
-                <span class="stat-number" id="last-updated">1-21-26</span>
+                <span class="stat-number" id="last-updated">1-26-26</span>
                 <span style="color: white;"  class="stat-label">Last Updated</span>
             </div>
             <div class="stat">
-                <span class="stat-number" id="version">2026.1.1</span>
+                <span class="stat-number" id="version">2026.1.2</span>
                 <span style="color: white;"  class="stat-label">Current Version</span>
             </div>
             <div class="stat">
@@ -93,7 +93,7 @@
               <p>Added Contact</p>
             </li>
             <li>
-                              <p>Added Blog</p>
+              <p>Added Blog</p>
             <li>
                 <p>Added About</p>
             </li>
@@ -135,6 +135,12 @@
             </li>
             <li>
               <p>Fixed broken list cause I forgot how HTML lists work <i><b>[2026.1.1]</b></i></p>
+            </li>
+            <li>
+              <p>Fixed Random tutorial tag and leftover share buttons <i><b>[2026.1.2]</b></i></p>
+            </li>
+            <li>
+              <p>Added old splash page back <i><b>[2026.1.2]</b></i></p>
             </li>
         </ul>
     </section>
