--- a/meta.html
+++ b/meta.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section class="about">
+<section class="about">
         <h2>Quick Facts</h2>
         <div class="stats">
             <div class="stat">
@@ -66,7 +66,7 @@
                 <span style="color: white;"  class="stat-label">Last Updated</span>
             </div>
             <div class="stat">
-                <span class="stat-number" id="version">2026.1.2</span>
+                <span class="stat-number" id="version">2026.1.3</span>
                 <span style="color: white;"  class="stat-label">Current Version</span>
             </div>
             <div class="stat">
@@ -141,6 +141,9 @@
             </li>
             <li>
               <p>Added old splash page back <i><b>[2026.1.2]</b></i></p>
+            </li>
+            <li>
+              <p>Removed a:visited style <i><b>[2026.1.3]</b></i></p>
             </li>
         </ul>
     </section>
